makeup main; add mailer;

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,6 @@
 ru:
   more: "Показать больше моделей"
-  default_seo_title: "Магазин Стиль - женская обувь Тверь"
+  default_seo_title: "Магазин Стиль - женская обувь"
   views:
     pagination:
       truncate: '…'
